# astro

./: .gitignore  404.html  CLEAR_CACHE.md  README.md  astro_project.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-train.txt  requirements.txt  sitemap.xml
.cursor/plans/: mkdocs_enterprise_documentation_163c07f7.plan.md  quant_system_hardening_44a52dae.plan.md
.github/workflows/: deploy-docs.yml
api/endpoints/: index.html
api/overview/: index.html
architecture/data_flow/: index.html
architecture/hld/: index.html
architecture/sequence_diagrams/: index.html
architecture/system_design/: index.html
astro/: __init__.py
astro/agents/: __init__.py
astro/api/: __init__.py  app.py  dependencies.py  lifecycle.py
astro/backtesting/: engine.py  metrics.py  simulator.py
astro/configs/: agents.yaml  ibkr.yaml  model.yaml  risk.yaml  system.yaml
astro/decision_engine/: __init__.py  executor.py  governance_mode.py  policy.py  routing.py  state_manager.py  workflow.py
astro/evaluation/: __init__.py  __main__.py  runner.py
astro/execution/: __init__.py  order_manager.py  slippage_model.py  trade_executor.py
astro/features/: __init__.py  diagnostics.py  schema_registry.json  validation.py
astro/ingestion/: STREAMING.md  (+2 more)
docs/: index.md
postman/: Astro_Trading_API.postman_collection.json
scripts/: baseline_benchmark.py  bootstrap_fused_features.py  run_api.py  run_backtest.py  run_decision.py  run_live.py  test_ib_gateway.py  train_model.py
search/: search_index.json
tests/: test_api.py
(+157 files in other folders)
