[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-trading"
version = "0.1.0"
description = "Project Astro: IBKR-first modular trading agents and decision engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.8.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rank-bm25>=0.2.2",
    "stockstats>=0.6.2",
    "pyarrow>=14.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
ibkr = ["ib_async>=2.0.0"]
train = ["torch>=2.0.0"]
vectordb = ["chromadb>=0.4.0"]
all = ["astro-trading[ibkr,train,vectordb]"]
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astro*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
